--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');
 
-*{
-    font-family: 'Roboto', sans-serif;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
 
 @media (max-width: 904px){
@@ -12,16 +12,22 @@
         font-size: 12px;
         max-height: 15px;
     }
+    .meio{
+        padding-left: 5rem;
+    }
 }
 
 body{
-    background-color: #0C1737;
+    /* background-color: #0C1737; */
+    background: linear-gradient(45deg,#3c59a8,#0C1736);
+
 }
 
 .cabecalho{
     background-color: #0C1736;
     padding-left: 15%;
     padding-right: 8%;
+    padding-top: 1.2%;
 }
 
 .cabecalhoLink a{
@@ -33,24 +39,38 @@ body{
 
 .cabecalhoLink a:hover{
     transition: ease-in-out;
-    color: blue;
+    color: rgb(38, 187, 233);
     transition: 1s;
     border-radius: 15px;
+    transform: scale(1.1);
+}
+
+.icone{
+    height: 50px;
+    padding-left: 10rem;
+}
+
+.prefooter{
+    width: 1280px;
+}
+
+.direita{
+    text-align: right;
 }
 
 .banner{
-    height: 90px;
+    height: 20px;
     /* border: 2px solid black; */
 }
 
 .banner2{
-    height: 150px;
+    height: 40px;
     /* border: 2px solid black; */
     padding: 10px;
 }
 
 .banner3{
-    height: 80px;
+    height: 280px;
     /* border: 2px solid black; */
     padding: 10px;
 }
@@ -61,65 +81,6 @@ body{
     padding: 10px;
 }
 
-.titulo{
-    height: 40px;
-    border: 3px solid white;
-    color: white;
-    font-size: 0.9em;
-}
-
-.titulo-grande{
-    /* height: 100px; */
-    border: 3px solid white;
-    font-size: 2em;
-    font-weight: bold;
-    color: white;
-}
-
-.emprego{
-    background-color: rgb(1, 87, 155);
-}
-
-.curriculo{
-    background-color: #E65100;
-}
-
-.classificado{
-    background-color: #004D40;
-}
-
-.destaque{
-    background-color: #FF9800;
-}
-
-.gratis{
-    background-color: #4CAF50;
-}
-
-.tituloCard1{
-    background-color: #2196F3;
-    width: 8rem;
-    color: white;
-    margin-bottom: 10px;
-}
-.tituloCard2{
-    background-color: #E91E63;
-    width: 8rem;
-    color: white;
-    margin-bottom: 10px;
-}
-.tituloCard3{
-    background-color: #4CAF50;
-    width: 8rem;
-    color: white;
-    margin-bottom: 10px;
-}
-.tituloCard4{
-    background-color: #FF9800;
-    width: 8rem;
-    color: white;
-    margin-bottom: 10px;
-}
 
 .rodape{
     background-color: #0C1736;
@@ -135,16 +96,6 @@ body{
 .posRodape{
     height: 7vh;
     background-color: #0C1737;
-}
-
-.bdcrumb{
-    background-color: #F44336;
-    padding: 12px 0 12px 18%;
-    padding-left: 18%;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    min-height: 5vh;
-    font-size: 1.2em;
 }
 
 .artigo{
@@ -182,6 +133,98 @@ body{
 }
 
 .itens{
-    background-color: #0C1736;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    border: none;
+    background-color: #2c4b6f;
     color: white;
+}
+
+
+/* aaaaaaaaaaaaaaaaaa */
+
+.order-card {
+    color: #fff;
+}
+
+.lista{
+    background-color:#0C1736;
+}
+
+.lista a{
+    color: white;
+}
+
+.lista a:hover{
+    color: cyan;
+}
+
+.bg-c-blue {
+    background: linear-gradient(45deg,#4099ff,#2c4b6f);
+}
+
+.bg-c-bronze {
+    background: linear-gradient(45deg,#b36939,rgb(81, 39, 3));
+}
+
+.bg-c-silver {
+    background: linear-gradient(45deg,#6a839f,rgb(75, 79, 84));
+}
+
+.bg-c-green {
+    background: linear-gradient(45deg,#6a9f6e,rgb(7, 119, 11));
+}
+
+.bg-c-gold {
+    background: linear-gradient(45deg,#9f9c6a,rgb(153, 136, 6));
+}
+
+.bg-c-plat {
+    background: linear-gradient(45deg,#6a959f,rgb(6, 153, 146));
+}
+
+.bg-c-diamond {
+    background: linear-gradient(45deg,#4096a3,rgb(19, 192, 244));
+}
+
+.card1 {
+    border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    border: none;
+    margin-bottom: 30px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.card1 .card-block {
+    padding: 25px;
+}
+
+.order-card i {
+    font-size: 16px;
+}
+
+.f-left {
+    float: left;
+}
+
+.f-right {
+    float: right;
+}
+
+.accordion-button{
+    background-color: #0D6EFD;
+    color: white;
+}
+
+.botao:hover{
+    transition: .5s;
+	transform: scale(1.12);
+    color: #07f5fe;
+}
+
+.botao2:hover{
+    transition: .5s;
+	transform: scale(1.1);
 }
